--- a/src/components/Cart/Cart.module.css
+++ b/src/components/Cart/Cart.module.css
@@ -3,7 +3,11 @@
   margin: 0;
   padding: 0;
   max-height: 20rem;
-  overflow: auto;
+  overflow: scroll;
+}
+
+.cart-items ::-webkit-scrollbar {
+  display: none;
 }
 
 .total {
