Added loading spinner while data is being fetched and send to firebase

--- a/src/components/Cart/Cart.module.css
+++ b/src/components/Cart/Cart.module.css
@@ -48,3 +48,10 @@
   background-color: #8a2b06;
   color: white;
 }
+
+.submittingContent {
+  display: flex;
+  flex-flow: column;
+  justify-content: center;
+  align-items: center;
+}
