--- a/src/components/Layout/Header.module.css
+++ b/src/components/Layout/Header.module.css
@@ -27,3 +27,15 @@
   object-fit: cover;
   transform: rotateZ(-5deg) translateY(-4rem) translateX(-1rem);
 }
+
+@media (max-width: 768px) {
+  .header h1 {
+    font-size: 1.5em;
+  }
+}
+
+@media (max-width: 540px) {
+  .header h1 {
+    font-size: 1em;
+  }
+}
