--- a/src/components/Layout/Header.module.css
+++ b/src/components/Layout/Header.module.css
@@ -36,6 +36,12 @@
 
 @media (max-width: 540px) {
   .header h1 {
+    font-size: 1.25em;
+  }
+}
+
+@media (max-width: 400px) {
+  .header h1 {
     font-size: 1em;
   }
 }
