--- a/src/components/Cart/Cart.module.css
+++ b/src/components/Cart/Cart.module.css
@@ -2,12 +2,8 @@
   list-style: none;
   margin: 0;
   padding: 0;
-  max-height: 20rem;
-  overflow: scroll;
-}
-
-.cart-items::-webkit-scrollbar {
-  display: none;
+  max-height: 40vh;
+  overflow: auto;
 }
 
 .total {
