Refactored the google analytics code. Also added validation for cart items to make sure ordered amount per item does not exceed more than 5

--- a/src/components/Cart/CartItem.module.css
+++ b/src/components/Cart/CartItem.module.css
@@ -69,3 +69,12 @@
   background-color: #8a2b06;
   color: white;
 }
+
+.invalid {
+  border-color: #aa0b20;
+  background-color: #ffeff1;
+}
+
+.invalidMessage p {
+  color: #aa0b20;
+}
