--- a/src/components/UI/Modal.module.css
+++ b/src/components/UI/Modal.module.css
@@ -21,6 +21,10 @@
   animation: slide-down 300ms ease-out forwards;
 }
 
+.modal-top {
+  top: 1vh;
+}
+
 @media (min-width: 768px) {
   .modal {
     width: 40rem;
